--- a/livingdoc-core/pom.xml
+++ b/livingdoc-core/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>info.novatec.testit</groupId>
 		<artifactId>livingdoc</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>livingdoc-core</artifactId>
