--- a/livingdoc-remote-agent/pom.xml
+++ b/livingdoc-remote-agent/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>info.novatec.testit</groupId>
 		<artifactId>livingdoc</artifactId>
-		<version>1.1.0-SNAPSHOT</version>
+		<version>1.1.0</version>
 	</parent>
 
 	<artifactId>livingdoc-remote-agent</artifactId>
