--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
 jdk:
-  - oraclejdk7
-  - openjdk7
+  - oraclejdk8
 script:
   - mvn clean
   - mvn verify
+  
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
