--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>info.novatec.testit</groupId>
 	<artifactId>livingdoc</artifactId>
 	<packaging>pom</packaging>
-	<version>1.1.0</version>
+	<version>1.2.0-SNAPSHOT</version>
 
 	<name>${project.title}</name>
 	<url>https://github.com/testIT-LivingDoc/livingdoc-core</url>
