--- a/livingdoc-cli/pom.xml
+++ b/livingdoc-cli/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>info.novatec.testit</groupId>
 		<artifactId>livingdoc</artifactId>
-		<version>1.1.0</version>
+		<version>1.1.1</version>
 	</parent>
 
 	<artifactId>livingdoc-cli</artifactId>
@@ -28,6 +28,10 @@
 				<exclusion>
 					<artifactId>xmlrpc-client</artifactId>
 					<groupId>org.apache.xmlrpc</groupId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-annotations</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
