removed variable ${project.title} because of error displaying the title on maven repository

--- a/livingdoc-cli/pom.xml
+++ b/livingdoc-cli/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>livingdoc-cli</artifactId>
-	<name>${project.title} - Command Line</name>
+	<name>testIT | LivingDoc - Command Line</name>
 
 	<properties>
 		<project.root>..</project.root>
