--- a/livingdoc-remote-agent/pom.xml
+++ b/livingdoc-remote-agent/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>livingdoc-remote-agent</artifactId>
-	<name>${project.title} - Remote Agent</name>
+	<name>testIT | LivingDoc - Remote Agent</name>
 
 	<properties>
 		<project.root>..</project.root>
