--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 	<version>1.2.0-SNAPSHOT</version>
 
-	<name>${project.title}</name>
+	<name>testIT | LivingDoc</name>
 	<url>https://github.com/testIT-LivingDoc/livingdoc-core</url>
 	<description>LivingDoc is a powerful tool that supports implementing collaboration driven methods like Behavior Driven Development or Specification By Example.</description>
 	<inceptionYear>2015</inceptionYear>
@@ -35,7 +35,6 @@
 
 	<properties>
 		<project.root>.</project.root>
-		<project.title>testIT | LivingDoc</project.title>
 		<project.java.version>1.8</project.java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
