--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 language: java
 jdk:
-  - oraclejdk8
+  - openjdk6
 script:
   - mvn clean
   - mvn verify
-  
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
