--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<groupId>info.novatec.testit</groupId>
 	<artifactId>livingdoc</artifactId>
 	<packaging>pom</packaging>
-	<version>1.2.0-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<name>testIT | LivingDoc</name>
 	<url>https://github.com/testIT-LivingDoc/livingdoc-core</url>
@@ -35,7 +35,7 @@
 
 	<properties>
 		<project.root>.</project.root>
-		<project.java.version>1.8</project.java.version>
+		<project.java.version>1.6</project.java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<rules.pmd>${project.root}/development/pmd_rules.xml</rules.pmd>
@@ -226,9 +226,6 @@
 							<goals>
 								<goal>jar</goal>
 							</goals>
-							<configuration>
-								<additionalparam>-Xdoclint:none</additionalparam>
-							</configuration>
 						</execution>
 					</executions>
 				</plugin>
@@ -292,9 +289,10 @@
 					<version>2.4.1</version>
 				</plugin>
 				<plugin>
+					<!-- newer versions need JDK 7! -->
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>1.10</version>
+					<version>1.9.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
