--- a/livingdoc-samples/pom.xml
+++ b/livingdoc-samples/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>info.novatec.testit</groupId>
 		<artifactId>livingdoc</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0.1</version>
 	</parent>
 
 	<artifactId>livingdoc-samples</artifactId>
