--- a/livingdoc-maven/src/license/THIRD-PARTY.properties
+++ b/livingdoc-maven/src/license/THIRD-PARTY.properties
@@ -3,7 +3,6 @@
 # Already used licenses in project :
 # - Apache License 2.0
 # - Apache License, Version 2.0
-# - Common Public License Version 1.0 (CPL)
 # - Copyright 2002 (C) The Codehaus. All Rights Reserved, https://fedoraproject.org/wiki/Licensing/Plexus_Classworlds_License
 # - GNU General Public License, Version 3.0
 # - GNU Lesser Public License
@@ -18,12 +17,8 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Fri Mar 11 11:14:02 CET 2016
-axis--axis--1.3=The Apache Software License, Version 2.0
-axis--axis-jaxrpc--1.3=The Apache Software License, Version 2.0
-axis--axis-saaj--1.3=The Apache Software License, Version 2.0
+#Thu Aug 25 14:39:53 CEST 2016
 classworlds--classworlds--1.1-alpha-2=Copyright 2002 (C) The Codehaus. All Rights Reserved, https\://fedoraproject.org/wiki/Licensing/Plexus_Classworlds_License
-commons-discovery--commons-discovery--0.2=The Apache License, Version 2.0
 ognl--ognl--2.7.3=The Apache License, Version 2.0
 org.apache.maven.plugins--maven-compiler-plugin--2.0=The Apache License, Version 2.0
 org.apache.maven.plugins--maven-resources-plugin--2.1=The Apache License, Version 2.0
@@ -33,5 +28,4 @@ org.codehaus.plexus--plexus-compiler-javac--1.5.1=The Apache License, Version 2.
 org.codehaus.plexus--plexus-compiler-manager--1.5.1=The Apache License, Version 2.0
 org.codehaus.plexus--plexus-container-default--1.0-alpha-8=The Apache License, Version 2.0
 org.codehaus.plexus--plexus-utils--1.1=The Apache License, Version 2.0
-wsdl4j--wsdl4j--1.5.1=Common Public License Version 1.0 (CPL)
 xmlrpc--xmlrpc--2.0.1=The Apache Software License, Version 2.0
