--- a/livingdoc-remote-agent/src/license/THIRD-PARTY.properties
+++ b/livingdoc-remote-agent/src/license/THIRD-PARTY.properties
@@ -6,8 +6,7 @@
 # - Apache License, Version 2.0
 # - BSD style license, http://dom4j.sourceforge.net/dom4j-1.6.1/license.html
 # - CDDL + GPLv2 with classpath exception, https://glassfish.dev.java.net/nonav/public/CDDL+GPL.html
-# - Common Public License Version 1.0 (CPL)
-# - GNU GENERAL PUBLIC LICENSE, Version 3
+# - GNU General Public License, Version 3.0
 # - GNU LESSER GENERAL PUBLIC LICENSE
 # - GNU Lesser Public License
 # - INRIA, France Telecom http://asm.ow2.org/license.html
@@ -18,25 +17,19 @@
 # - The Apache Software License, Version 2.0
 # - The New BSD License
 # - WTFPL
-# - https://forum.hibernate.org/viewtopic.php?f=1&t=996084
 # - unknown
 #-------------------------------------------------------------------------------
 # Please fill the missing licenses for dependencies :
 #
 #
-#Fri Dec 04 16:02:21 CET 2015
+#Fri Aug 26 11:44:53 CEST 2016
 antlr--antlr--2.7.6=ANTLR 2 License http\://www.antlr2.org/license.html
 asm--asm--1.5.3=INRIA, France Telecom http\://asm.ow2.org/license.html
 asm--asm-attrs--1.5.3=INRIA, France Telecom http\://asm.ow2.org/license.html
-axis--axis--1.3=The Apache Software License, Version 2.0
-axis--axis-jaxrpc--1.3=The Apache Software License, Version 2.0
-axis--axis-saaj--1.3=The Apache Software License, Version 2.0
 cglib--cglib--2.1_3=The Apache License, Version 2.0
 commons-collections--commons-collections--2.1.1=Apache License, Version 2.0
-commons-discovery--commons-discovery--0.2=The Apache License, Version 2.0
 dom4j--dom4j--1.6.1=BSD style license, http\://dom4j.sourceforge.net/dom4j-1.6.1/license.html
 javax.transaction--jta--1.1=CDDL + GPLv2 with classpath exception, https\://glassfish.dev.java.net/nonav/public/CDDL+GPL.html
 ognl--ognl--2.7.3=The Apache License, Version 2.0
 org.hibernate--ejb3-persistence--1.0.1.GA=unknown
-wsdl4j--wsdl4j--1.5.1=Common Public License Version 1.0 (CPL)
 xmlrpc--xmlrpc--2.0.1=The Apache Software License, Version 2.0
