--- a/livingdoc-cli/pom.xml
+++ b/livingdoc-cli/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>info.novatec.testit</groupId>
 		<artifactId>livingdoc</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1.3</version>
 	</parent>
 
 	<artifactId>livingdoc-cli</artifactId>
