New interpreters : Wokflow & Decision Table

--- a/livingdoc-core/src/main/resources/alias_keywords.properties
+++ b/livingdoc-core/src/main/resources/alias_keywords.properties
@@ -1,21 +1,16 @@
 ## DO WITH
 
-# Verify the specified expected value with the value returned by the system under development
 check = Prüfe
-
-# Confirm that the action has been executed by the system under development.
 accept = Bestätige
-
-# The action should not be performed by the system under development (expected errors).
 reject = Nicht
-
-# Print the value returned by the system under development.
 display = Ausgabe
 
 ## RULE FOR (EXPECTED VALUES)
-
-# When you expect an error, specify it in the cell to test that particular behavior
 error = Fehler
-
-# When you expect null as return value, specify it in the cell to test that particular behavior
 null = nothing, leer
+
+## Workflow
+checkThat = Prüfe dass
+given = Gegeben
+when = wenn
+then = dann
