--- a/livingdoc-core/src/main/resources/alias_interpreters.properties
+++ b/livingdoc-core/src/main/resources/alias_interpreters.properties
@@ -1,8 +1,10 @@
 info.novatec.testit.livingdoc.interpreter.SetupInterpreter = Initialisierung
 
 info.novatec.testit.livingdoc.interpreter.ActionInterpreter = Aktion
-info.novatec.testit.livingdoc.interpreter.DoWithInterpreter = Ablauf
+info.novatec.testit.livingdoc.interpreter.DoWithInterpreter = Testablauf
 info.novatec.testit.livingdoc.interpreter.ScenarioInterpreter = Szenario
+info.novatec.testit.livingdoc.interpreter.WorkflowInterpreter = Ablauf
+
 
 info.novatec.testit.livingdoc.interpreter.RuleForInterpreter = Regelvalidierung
 
