Upgraded support to hibernate 5.1.x

--- a/livingdoc-cli/src/license/THIRD-PARTY.properties
+++ b/livingdoc-cli/src/license/THIRD-PARTY.properties
@@ -3,6 +3,8 @@
 # Already used licenses in project :
 # - Apache License 2.0
 # - Apache License, Version 2.0
+# - Eclipse Distribution License (EDL), Version 1.0
+# - Eclipse Public License (EPL), Version 1.0
 # - GNU General Public License, Version 3.0
 # - GNU Lesser Public License
 # - LGPL 2.1
@@ -15,6 +17,6 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Fri Mar 11 11:13:49 CET 2016
+#Wed Sep 14 23:41:37 CEST 2016
 ognl--ognl--2.7.3=The Apache Software License, Version 2.0
 xmlrpc--xmlrpc--2.0.1=The Apache Software License, Version 2.0
