--- a/livingdoc-maven/src/license/THIRD-PARTY.properties
+++ b/livingdoc-maven/src/license/THIRD-PARTY.properties
@@ -4,6 +4,8 @@
 # - Apache License 2.0
 # - Apache License, Version 2.0
 # - Copyright 2002 (C) The Codehaus. All Rights Reserved, https://fedoraproject.org/wiki/Licensing/Plexus_Classworlds_License
+# - Eclipse Distribution License (EDL), Version 1.0
+# - Eclipse Public License (EPL), Version 1.0
 # - GNU General Public License, Version 3.0
 # - GNU Lesser Public License
 # - LGPL 2.1
@@ -17,7 +19,7 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Thu Aug 25 14:39:53 CEST 2016
+#Wed Sep 14 23:41:52 CEST 2016
 classworlds--classworlds--1.1-alpha-2=Copyright 2002 (C) The Codehaus. All Rights Reserved, https\://fedoraproject.org/wiki/Licensing/Plexus_Classworlds_License
 ognl--ognl--2.7.3=The Apache License, Version 2.0
 org.apache.maven.plugins--maven-compiler-plugin--2.0=The Apache License, Version 2.0
