ISSUE-41: fixed bug concerning old version of javassist

--- a/livingdoc-maven/src/license/THIRD-PARTY.properties
+++ b/livingdoc-maven/src/license/THIRD-PARTY.properties
@@ -19,9 +19,8 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Sun Sep 25 20:19:26 CEST 2016
+#Sun Nov 06 20:40:03 CET 2016
 classworlds--classworlds--1.1-alpha-2=Copyright 2002 (C) The Codehaus. All Rights Reserved, https\://fedoraproject.org/wiki/Licensing/Plexus_Classworlds_License
-ognl--ognl--2.7.3=The Apache License, Version 2.0
 org.apache.maven.plugins--maven-compiler-plugin--2.0=The Apache License, Version 2.0
 org.apache.maven.plugins--maven-resources-plugin--2.1=The Apache License, Version 2.0
 org.codehaus.plexus--plexus-archiver--1.0-alpha-7=The Apache License, Version 2.0
