--- a/livingdoc-cli/src/license/THIRD-PARTY.properties
+++ b/livingdoc-cli/src/license/THIRD-PARTY.properties
@@ -17,6 +17,5 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Sun Sep 25 20:19:03 CEST 2016
-ognl--ognl--2.7.3=The Apache Software License, Version 2.0
+#Sun Nov 06 20:39:49 CET 2016
 xmlrpc--xmlrpc--2.0.1=The Apache Software License, Version 2.0
