--- a/livingdoc-remote-agent/src/license/THIRD-PARTY.properties
+++ b/livingdoc-remote-agent/src/license/THIRD-PARTY.properties
@@ -10,7 +10,6 @@
 # - LGPL 2.1
 # - MIT License
 # - MPL 1.1
-# - The Apache License, Version 2.0
 # - The Apache Software License, Version 2.0
 # - The New BSD License
 # - WTFPL
@@ -18,6 +17,5 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Sun Sep 25 20:19:15 CEST 2016
-ognl--ognl--2.7.3=The Apache License, Version 2.0
+#Sun Nov 06 20:39:56 CET 2016
 xmlrpc--xmlrpc--2.0.1=The Apache Software License, Version 2.0
