--- a/livingdoc-samples/src/license/THIRD-PARTY.properties
+++ b/livingdoc-samples/src/license/THIRD-PARTY.properties
@@ -6,10 +6,11 @@
 # - Apache License, Version 2.0
 # - BSD style license, http://dom4j.sourceforge.net/dom4j-1.6.1/license.html
 # - CDDL + GPLv2 with classpath exception, https://glassfish.dev.java.net/nonav/public/CDDL+GPL.html
-# - GNU GENERAL PUBLIC LICENSE, Version 3
+# - GNU General Public License, Version 3.0
 # - GNU LESSER GENERAL PUBLIC LICENSE
 # - GNU Lesser Public License
 # - INRIA, France Telecom http://asm.ow2.org/license.html
+# - JSR-000220 Enterprise JavaBeans v.3.0 ("Specification"), Copyright 2006 SUN MICROSYSTEMS, INC.
 # - LGPL 2.1
 # - MPL 1.1
 # - The Apache License, Version 2.0
@@ -20,7 +21,7 @@
 # Please fill the missing licenses for dependencies :
 #
 #
-#Fri Dec 04 16:05:35 CET 2015
+#Sun Nov 06 20:39:44 CET 2016
 antlr--antlr--2.7.6=ANTLR 2 License http\://www.antlr2.org/license.html
 asm--asm--1.5.3=INRIA, France Telecom http\://asm.ow2.org/license.html
 asm--asm-attrs--1.5.3=INRIA, France Telecom http\://asm.ow2.org/license.html
@@ -28,5 +29,4 @@ cglib--cglib--2.1_3=The Apache License, Version 2.0
 commons-collections--commons-collections--2.1.1=The Apache License, Version 2.0
 dom4j--dom4j--1.6.1=BSD style license, http\://dom4j.sourceforge.net/dom4j-1.6.1/license.html
 javax.transaction--jta--1.1=CDDL + GPLv2 with classpath exception, https\://glassfish.dev.java.net/nonav/public/CDDL+GPL.html
-ognl--ognl--2.7.3=The Apache License, Version 2.0
 org.hibernate--ejb3-persistence--1.0.1.GA=JSR-000220 Enterprise JavaBeans v.3.0 ("Specification"), Copyright 2006 SUN MICROSYSTEMS, INC.
