Authentication added to the REST client.
- "Basic" authentication added to the REST client.
- The @JsonIgnore annotation has been added to solve the problem in the serialization of JSON objects caused by lazy initialization of unnecessary collections.
- Some classes that use RPC-XML calls have already been deprecated.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@
 **.iml
 **.ipr
 **.iws
+livingdoc-samples/target/
+\.idea/
+livingdoc-samples/livingdoc-samples\.iml
+livingdoc-cli/livingdoc-cli\.iml
+livingdoc-client/livingdoc-client\.iml
+livingdoc-core/livingdoc-core\.iml
+livingdoc-plugin/livingdoc-plugin\.iml
 
 # Eclipse
 **.settings/
