--- a/livingdoc-client/pom.xml
+++ b/livingdoc-client/pom.xml
@@ -45,7 +45,11 @@
 			<artifactId>xmlrpc-client</artifactId>
 			<version>3.1.3</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
