listDocumentsInHierarchy() and loadDocument() method use REST client now
- PowerMock dependencies added.
- Now, all of the methods of AtlassianRepotirory use REST

--- a/livingdoc-client/pom.xml
+++ b/livingdoc-client/pom.xml
@@ -54,6 +54,20 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>4.2.5.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-beans</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-aop</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-context</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
