--- a/livingdoc-cli/pom.xml
+++ b/livingdoc-cli/pom.xml
@@ -33,7 +33,21 @@
 					<groupId>org.hibernate</groupId>
 					<artifactId>hibernate-annotations</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 
 		<!-- Logging -->
@@ -71,7 +85,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>info.novatec.testit.livingdoc.runner.Main</mainClass>
+									<mainClass>info.novatec.testit.livingdoc.server.rpc.runner.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
