--- a/livingdoc-cli/pom.xml
+++ b/livingdoc-cli/pom.xml
@@ -23,17 +23,26 @@
 			<groupId>info.novatec.testit</groupId>
 			<artifactId>livingdoc-client</artifactId>
 			<version>${project.version}</version>
-			<!-- Use xmlrpc v2 (exclude v3) -->
 			<exclusions>
-				<exclusion>
-					<artifactId>xmlrpc-client</artifactId>
-					<groupId>org.apache.xmlrpc</groupId>
-				</exclusion>
 				<exclusion>
 					<groupId>org.hibernate</groupId>
 					<artifactId>hibernate-annotations</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 
 		<!-- Logging -->
@@ -71,7 +80,7 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>info.novatec.testit.livingdoc.runner.Main</mainClass>
+									<mainClass>info.novatec.testit.livingdoc.server.rpc.runner.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
