--- a/livingdoc-client/pom.xml
+++ b/livingdoc-client/pom.xml
@@ -24,6 +24,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
 			<groupId>info.novatec.testit</groupId>
 			<artifactId>livingdoc-core</artifactId>
 			<version>${project.version}</version>
