--- a/livingdoc-client/pom.xml
+++ b/livingdoc-client/pom.xml
@@ -51,6 +51,11 @@
 			<version>1.9.13</version>
 		</dependency>
 		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>4.2.5.RELEASE</version>
