--- a/livingdoc-remote-agent/pom.xml
+++ b/livingdoc-remote-agent/pom.xml
@@ -53,6 +53,11 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.0.2</version>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.11</version>
+		</dependency>
 
 		<!-- Testing -->
 		<dependency>
