--- a/livingdoc-client/pom.xml
+++ b/livingdoc-client/pom.xml
@@ -15,6 +15,7 @@
 
 	<properties>
 		<project.root>..</project.root>
+		<jackson.version>2.7.0</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -56,14 +57,15 @@
 			<version>2.8.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>4.2.5.RELEASE</version>
 			<exclusions>
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring-beans</artifactId>
-				</exclusion>
 				<exclusion>
 					<groupId>org.springframework</groupId>
 					<artifactId>spring-aop</artifactId>
