--- a/pom.xml
+++ b/pom.xml
@@ -451,6 +451,16 @@
             </build>
         </profile>
 
+        <profile>
+            <id>disable-java8-doclint</id>
+            <activation>
+                <jdk>[1.8,)</jdk>
+            </activation>
+            <properties>
+                <additionalparam>-Xdoclint:none</additionalparam>
+            </properties>
+        </profile>
+
     </profiles>
 
     <developers>
