--- a/livingdoc-client/pom.xml
+++ b/livingdoc-client/pom.xml
@@ -36,6 +36,11 @@
 			<version>1.0.0.Final</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jasypt</groupId>
+			<artifactId>jasypt</artifactId>
+			<version>1.9.2</version>
+		</dependency>
+		<dependency>
 			<groupId>xmlrpc</groupId>
 			<artifactId>xmlrpc</artifactId>
 			<version>2.0.1</version>
