--- a/livingdoc-client/pom.xml
+++ b/livingdoc-client/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>info.novatec.testit</groupId>
 		<artifactId>livingdoc</artifactId>
-		<version>1.3-SNAPSHOT</version>
+		<version>1.3.3</version>
 	</parent>
 
 	<artifactId>livingdoc-client</artifactId>
