--- a/livingdoc-plugin/pom.xml
+++ b/livingdoc-plugin/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>info.novatec.testit</groupId>
 		<artifactId>livingdoc</artifactId>
-		<version>1.3-SNAPSHOT</version>
+		<version>1.3.4</version>
 	</parent>
 
 	<artifactId>livingdoc-plugin</artifactId>
